--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -162,7 +162,8 @@
 					</div><span th:text="#{alerts}" class="navigation-item-span-bottom"></span>
 				</a> <a class="navbar-item is-expanded navigation-item" id="nav-chats" href="/chats">
 					<div>
-						<i class="fa fa-comments"></i><span th:text="#{chats}" class="navigation-item-span-right"></span>
+						<i class="fa fa-comments"></i><span th:text="#{chats}"
+							class="navigation-item-span-right"></span>
 					</div><span th:text="#{chats}" class="navigation-item-span-bottom"></span>
 				</a> <a class="navbar-item is-expanded navigation-item" href="/profile" id="nav-profile">
 					<div>
@@ -276,28 +277,32 @@
 										</div>
 									</div>
 									<div class="profile-bottom full-width dimmed"
-										style="display: inline-block;">
-										<div class="left">
-											<button class="button colored is-info"
-												th:onclick="viewProfile([[${user.idEncoded}]]);" style="margin-right: 4px;">
-												<i class="fa fa-user"></i>
-											</button>
-											<button class="button colored is-info search-audio" th:if="${user.hasAudio}"
-												th:onclick="playPauseAudio([[${user.idEncoded}]]);">
-												<i class="fa fa-headphones"></i>
-											</button>
-										</div>
-										<div class="right" th:if="${user.compatible}">
+										style="display: flex; justify-content: space-between;">
+
+										<button class="button colored is-info search-audio" th:if="${user.hasAudio}"
+											th:onclick="playPauseAudio([[${user.idEncoded}]]);">
+											<i class="fa fa-headphones"></i>
+										</button>
+										<div th:unless="${user.hasAudio}" class="search-audio" style="padding-left: 56px;"></div>
+											
+										<div class="right" th:if="${user.compatible}" style="display: flex;">
 											<button class="button colored is-danger"
 												style="margin-right: 4px;"
 												th:onclick="hideUser([[${user.idEncoded}]])">
 												<i class="fa fa-thumbs-down"></i>
 											</button>
+											<div class="search-button-padding"></div>
 											<button class="button colored is-success"
 												th:onclick="likeUser([[${user.idEncoded}]])">
 												<i class="fa fa-thumbs-up"></i>
 											</button>
 										</div>
+										<div th:unless="${user.compatible}"></div>
+										
+										<button class="button colored is-info"
+											th:onclick="viewProfile([[${user.idEncoded}]]);" style="margin-right: 4px;">
+											<i class="fa fa-user"></i>
+										</button>
 									</div>
 								</div>
 							</div>
