Stop pop in of notification button if already registered

--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -2,6 +2,13 @@
     height: initial;
 }
 
+#webpush-button {
+	display: none;
+	width: 100%; 
+	height: 100%; 
+	white-space: normal;
+}
+
 .notification:not(:last-child) {
 	margin-bottom: 0.5rem;
 }
