--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -34,8 +34,9 @@
 				</div>
 
 				<div class="field">
-					<div class="button is-info is-outlined button-wrap-text" id="btnPushNotifications" name="btnPushNotifications"
-						style="width: 100%; height: 100%; white-space: normal;"><span th:text="#{profile.webpush}"></span></div>
+					<div class="button is-info is-outlined button-wrap-text" id="webpush-button">
+						<span th:text="#{profile.webpush}"></span>
+					</div>
 				</div>
 
 				<div style="padding-bottom: 24px;"></div>
