--- a/src/main/resources/templates/register-oauth.html
+++ b/src/main/resources/templates/register-oauth.html
@@ -66,7 +66,7 @@
 						</div>
 						
 						<div class="field">
-							<label class="label" th:text="#{register.referral-code}" style="float: left;"></label>
+							<label class="label" th:text="#{register.referral-code} + ' (' + #{optional} +')'" style="float: left;"></label>
 							<div class="control">
 								<input class="input" name="referrerCode" id="referrer">
 							</div>
@@ -93,11 +93,11 @@
 						<div class="field is-grouped"
 							style="display: flex; justify-content: flex-start;">
 							<div class="control">
-								<button class="button colored is-link" type="submit" th:text="#{submit}"></button>
-							</div>
-							<div class="control">
 								<button class="button is-danger is-outlined" type="button"
 									onclick="window.location = '/'" th:text="#{cancel}"></button>
+							</div>
+							<div class="control">
+								<button class="button colored is-link" type="submit" th:text="#{submit}"></button>
 							</div>
 						</div>
 					</form>
