--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -59,7 +59,7 @@
 									</div>
 									<div th:replace="fragments.html::captcha"></div>
 									<div class="field">
-										<label class="checkbox"> <input type="checkbox" name="remember-me"> <span
+										<label class="checkbox"> <input type="checkbox" name="remember-me" checked> <span
 												th:text="#{login.remember}"></span>
 										</label>
 									</div>
