Update error page

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -26,6 +26,7 @@
 	</div>
 	<script src="/sw.js"></script>
 	<script src="/js/alovoa.js"></script>
+	<script>setTimeout(function(){ location.reload() }, 3000);</script>
 </body>
 
 </html>
