--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -104,7 +104,7 @@
 
 	<footer class="footer" th:fragment="footer" id="footer">
 		<div class="container">
-			<div class="columns">		min-height: calc(100 * var(--vh) - 52px);
+			<div class="columns">
 				<div class="column">
 					<div class="control has-icons-left" style="margin-top: -8px;">
 						<div class="select">
