--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -30,8 +30,8 @@
 
 			<div style="width: 100%; display: flex;">
 				<div class="navbar-end">
-					<div class="navbar-item navbar-item-icon" id="navbar-item-language" style="padding-right: 0px;">
-						<a class="button is-white is-outlined" onclick="onLanguageButtonClicked()"
+					<div class="navbar-item" id="navbar-item-language" style="padding-right: 0px;">
+						<a class="button is-white is-outlined navbar-item-icon" onclick="onLanguageButtonClicked()"
 							style="width: 40px; height: 40px;"><i style="padding-right: 0px; color: white;"
 								class="fas fa-globe"></i></a>
 					</div>
