Add github icon to footer

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -149,6 +149,12 @@
 				</div>
 				<div class="column">
 					<div class="has-text-centered">
+						<a href="https://www.github.com/Alovoa/Alovoa/">
+							<picture>
+								<source srcset="/img/github-dark.svg" media="(prefers-color-scheme: dark)">
+								<img src="/img/github.svg" style="height: 20px;">
+							</picture>
+						</a>
 						<a href="https://www.reddit.com/r/Alovoa/"><img src="/img/r-icon.svg" style="height: 20px;"
 								alt="reddit"></a>
 						<a href="https://twitter.com/alovoa_love"><img src="/img/t-icon.svg" style="height: 20px;"
